# actions-cache-test

./: LICENSE  Readme.txt
.github/workflows/: build.yaml
proj1/: CMakeLists.txt  proj1.cpp  proj1.h
proj2/: CMakeLists.txt  proj2.cpp
